--- a/index.html
+++ b/index.html
@@ -14,7 +14,7 @@
 <div class="top-container">
     <img src="images/cloud.png" class="top-cloud" alt="cloud-img">
     <h1>I'm Frederic Chhean</h1>
-    <h1>an Experience Product Manager (former Web Developer)</h1>
+    <h1>a Product Manager and current Web Development Student</h1>
     <img src="images/cloud.png" class="bottom-cloud" alt="cloud-img">
     <img src="images/mountain.png" alt="moutain-img">
 
@@ -24,7 +24,7 @@
         <div class="profile">
           <img src="/images/fred.jpg" alt="">
           <h2>Hello.</h2>
-          <p>Lorem ipsum dolor sit amet, vitae volutpat, dui conubia, dolor urna. Non auctor, montes nulla distinctio.</p>
+          <p>Welcome to my personal website. This place is my web development playground. I will test new coding skills to enhance continuously this website</p>
         </div>
         <hr>
         <div class="skills">
@@ -34,29 +34,8 @@
             <h3>Lorem & Ipsum</h3>
             <p>Lorem ipsum dolor sit amet, quis in duis, iaculis id felis. Consectetuer vestibulum, nunc urna lectus, erat ligula. Hendrerit nam, lectus ante, ut lorem eros.</p>
           </div>
-          <div class="development">
-            <img class="" src="/images/chillies.png" alt="ok">
-            <h3>Lorem Ipsum Dolor</h3>
-            <p>Lorem ipsum dolor sit amet, mauris sed consectetuer. Etiam et eu, bibendum interdum, lacus quis mauris. Curabitur wisi, quisque vel eu, rutrum nam.</p>
-          </div>
         </div>
-        <hr>
-        <div class="contact-me">
-          <table>
-            <thead>
-              <th>quote</th>
-              <th>player</th>
-            </thead>
-            <tr>
-              <td>allright baby</td>
-              <td>Messy</td>
-            </tr>
-            <tr>
-              <td>The best is</td>
-              <td>CR7</td>
-            </tr>
-          </table>
-        </div>
+ 
         <hr>
 
         <div class="contact-me">
