--- a/index.html
+++ b/index.html
@@ -9,9 +9,19 @@
     <link href="https://fonts.googleapis.com/css?family=Merriweather|Montserrat|Sacramento" rel="stylesheet">
 
     <title>F.Chhean</title>
+    <style>
+      hr {
+       
+        border-style: dotted;
+        border-width: 10px;
+        border-color:#a2d0c1;
+
+        width: 8%;
+      }
+    </style>
 </head>
-<body>
-<div class="top-container">
+<body style="background-color:#EAF6F6">
+<div style="background-color:#a2d0c1" class="top-container">
     <img src="images/cloud.png" class="top-cloud" alt="cloud-img">
     <h1>I'm Frederic Chhean</h1>
     <h1>a Product Manager and current Web Development Student</h1>
@@ -20,7 +30,7 @@
 
 
 </div>
-<div class="middle-container">
+<div style="background-color:#EAF6F6" class="middle-container">
         <div class="profile">
           <img src="/images/fred.jpg" alt="">
           <h2>Hello.</h2>
@@ -55,7 +65,6 @@
             <p>© 2018 Name Surname.</p>
           </div>
           
-</div>
 
 </body>
 </html>
